--- a/hw3/HW3.Rmd
+++ b/hw3/HW3.Rmd
@@ -23,11 +23,51 @@ From the entire dataset, select a subset of 6 fields of study, using arbitrary c
 
 **Hint:** To get started, see slides 34 to 44 in the class on getting things into the right order: https://wilkelab.org/DSC385/slides/getting-things-in-order.html#34
 
+It can be seen below that the `perc` column is a percentage of the degree out of all degrees _for that year_. The sum of all for one year is exactly __1__.
+
 ```{r}
-# your code goes here
+BA_degrees %>% filter(year == 1971) %>% pull(perc) %>% sum()
 ```
 
-*Your answer goes here.*
+Because the `perc` column is from __0__ to __1__, I mutate the data to scale to true percentage; in other words, out of __100__. The data is also rounded to one decimal place for ease of display.
+
+```{r}
+BA_degrees = BA_degrees %>% mutate(percentage = round(perc * 100, 1))
+BA_degrees
+```
+
+I have selected the six most numerous degrees in 2001 (arbitrarily), and plotted their percentage over time. By filtering by name in descending count order, the facets in the following graph will be ordered by count already.
+
+```{r}
+BA_degrees %>% filter(year == 2001) %>% arrange(-count)
+BA_degrees = BA_degrees %>% filter(
+  field == 'Business' |
+  field == 'Social sciences and history' |
+  field == 'Education' |
+  field == 'Health professions and related programs' |
+  field == 'Psychology' |
+  field == 'Visual and performing arts')
+BA_degrees
+```
+
+I now plot the data over time faceted to degree.
+
+```{r fig.width=10, fig.height=7}
+BA_degrees %>%
+  ggplot(aes(year, percentage)) +
+  geom_line() +
+  stat_smooth(method='lm') +
+  facet_wrap(vars(field)) +
+  scale_x_continuous(
+    name = "Year",
+    limits = c(1970, 2015),
+    breaks = c(1970, 1980, 1990, 2000, 2010)) +
+  scale_y_continuous(
+    name = "Percentage (%)"
+  )
+```
+
+It can be see from the graphs that business and health degrees are becoming more common, social sciences have become less common, psychology and arts degrees have relatively stagnated, and perhaps __most__ important is that education degrees are drastically fallen. One could presume that the degrees that are becoming more common are ones that have better earning potential, degrees that have fallen have lost earning potential, and degrees that have stagnated likely didn't not change in earning potential.
 
 
 **Problem 2:** We will work the `txhousing` dataset provided by **ggplot2**. See here for details: https://ggplot2.tidyverse.org/reference/txhousing.html
@@ -44,8 +84,7 @@ print(txhousing_jan_2015, n = nrow(txhousing_jan_2015))
 
 If you wanted to visualize the relative proportion of sales in these different cities, which plot would be most appropriate? A pie chart, a stacked bar chart, or side-by-side bars? Please explain your reasoning. You do not have to make the chart.
 
-**Answer:** *Your answer goes here.*
-
+**Answer:** Side by side bars would be best. Both pie charts and stacked bar charts are not good for direct comparison as it is hard to see the relative size against the other options. Pie charts are better for general overview without needing to compare, and stacked bars are not that useful in general; the beginning of each bar color is different per bar with the exception of the first and last, so it's difficult to make any valuable comparison.
 
 **Problem 3:** Now make a pie chart of the `txhousing_jan_2015` dataset, but show only the four cities with the most sales, plus all others lumped together into "Other". (The code to prepare this lumped dataset has been provided for your convenience.) Make sure the pie slices are arranged in a reasonable order. Choose a reasonable color scale and a clean theme that avoids distracting visual elements.
 
@@ -58,6 +97,23 @@ txhousing_lumped <- txhousing_jan_2015 %>%
   group_by(city) %>%
   summarize(sales = sum(sales))
 
-# your code goes here
+txhousing_lumped %>% ggplot() +
+  aes(sales, "YY", fill = fct_reorder(city, -sales)) +
+  geom_col() +
+  coord_polar() +
+  scale_x_continuous(
+    name = NULL,
+    breaks = NULL
+  ) +
+  scale_y_discrete(
+    name = NULL,
+    breaks = NULL
+  ) +
+  scale_fill_viridis_d(
+    name = "City",
+    option = "C"
+  ) +
+  theme(panel.background = element_blank()) +
+  ggtitle("Number of House Sales in Texas by City for January 2015")
 ```
 
